# sclerp_motion_planner

./: CMakeLists.txt  README.md  package.xml
include/sclerp_motion_planner/: sclerp_interface.h
src/: sclerp_interface.cpp  sclerp_motion_planner_test.cpp
