<?xml version="1.0"?>
<package format="2">
  <name>sclerp_motion_planner</name>
  <version>1.0.0</version>
  <description>The sclerp_motion_planner package</description>

  <author>Dasharadhan Mahalingam</author>

  <maintainer email="das.mahalingam@gmail.com">Dasharadhan Mahalingam</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>kinlib</build_depend>
  
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>kinlib</exec_depend>
  
  <exec_depend>eigen</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
